--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "helmet": "^7.1.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
