--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^5.2.0",
     "helmet": "^7.1.0",
     "mysql2": "^2.2.5",
+    "node": "^21.6.2",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
