--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "mysql2": "^2.2.5",
     "node": "^21.6.2",
